@@ -1,5 +1,9 @@
 2006-12-15  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/glib.symbols:
+	* glib/gstring.[hc] (g_string_chunk_clear): Add a function
+	for clearing a GStringChunk. (#364608, Matt Barnes)
+
 	* glib/guniprop.c (interval_compare): Avoid a compiler
 	warning.
 
